fixed bug where cells would misalign on the page after being clicked; added and tested tie functionality. feature complete! maybe some tinkering with counting wins or making things look nicer

--- a/style.css
+++ b/style.css
@@ -62,11 +62,21 @@ body {
     grid-template-rows: 90px ;
 }
 
+.board {
+    grid-row: 2/3;
+
+    display: grid;
+    grid-template-rows: repeat(3,200px);
+    grid-template-columns: repeat(3,200px);
+    gap: 3px;
+}
+
 .container {
     grid-row: 2/3;
 
     display: grid;
-    grid-template-rows: 50px repeat(3, 200px) 80px;
+    /* grid-template-rows: 50px repeat(3, 200px) 80px; */
+    grid-template-rows: 50px 600px 80px;
     gap: 2px;
 }
 
@@ -103,7 +113,7 @@ body {
     width: 200px;
     height: 200px;
     background-color: #5f9ea0;
-    font-size: 100px;
+    font-size: 150px;
     border: solid black 4px;
     padding: auto;
     margin: 0;
